# Slicer-BrainTumorSegmentation

./: BrainTumorSegmentation.s4ext  CMakeLists.txt  README.md
BrainTumorSegmentation/: AnatomicalStructureManager.h  BrainTumorSegmentation.cxx  BrainTumorSegmentation.xml  BvdFileManager.h  CMakeLists.txt  ChannelFarm.h  Controller.cpp  Controller.h  ControllerITK.cpp  Dataset.cpp  Dataset.h  DecisionForestTester.cpp  DecisionForestTester.h  DecisionTree.cpp  DecisionTree.h  DefaultForest.h  EntropyImplementationType.h  EnvironmentSettingsFileManager.cpp  EnvironmentSettingsFileManager.h  FeatureFarm.cpp  FeatureFarm.h  FeatureType.h  FeatureVolumeType.h  FileConverter.h  FilenameManager.h  ForestParameters.cpp  ForestParameters.h  IndexVolume.cpp  IndexVolume.h  NullptrWorkaround.h  PluginProcessWatcher.h  Posterior.cpp  Posterior.h  Random.h  TimeSpanCastManager.h  WLmapper.h  basicDefs.h  xvdFileManager.h  xvdTags.h
BrainTumorSegmentation/Blitz0.09CMake/: CMakeLists.txt
BrainTumorSegmentation/boost_1_46_1/boost/random/: uniform_int.hpp  uniform_real.hpp  variate_generator.hpp
BrainTumorSegmentation/tinyxml_2_6_1/tinyxml/: tinyXMLDumpToStdOut.cpp  tinyXMLDumpToStdOut.h  tinyxml.h
